--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.479.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
