--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.13",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.479.0",
     "react": "^18.3.1",
